--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: "6 6 1-31/2 * *"
+    - cron: "6 * * * *"
   repository_dispatch:
     types: [update]
 jobs:
