--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -15,12 +15,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Setup Deno
-        uses: denolib/setup-deno@master
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
         with:
-          deno-version: 1.x
+          node-version: 12
+      - name: Install dependencies
+        run: npm ci
       - name: Update backlog data
-        run: deno run --allow-net --allow-write --allow-read --allow-env --unstable mod.ts
+        run: npm run update-backlog
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
       - name: Commit new data
